# docs/swagger.json
@@ -17,13 +17,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.HealthResponse"
+                            "$ref": "#/definitions/health.HealthResponse"
                         }
                     },
                     "503": {
                         "description": "Service Unavailable",
                         "schema": {
-                            "$ref": "#/definitions/api.HealthResponse"
+                            "$ref": "#/definitions/health.HealthResponse"
                         }
                     }
                 }
@@ -42,7 +42,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/cat.ListCatsDto"
+                            "$ref": "#/definitions/route.FindCatsResponse"
                         }
                     }
                 }
@@ -62,7 +62,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/cat.CatCmd"
+                            "$ref": "#/definitions/route.CreateCatRequest"
                         }
                     }
                 ],
@@ -70,13 +70,13 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/cat.CatDto"
+                            "$ref": "#/definitions/route.CreateCatResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     }
                 }
@@ -84,7 +84,7 @@
         }
     },
     "definitions": {
-        "api.ErrorResponse": {
+        "dto.ErrorResponse": {
             "type": "object",
             "properties": {
                 "message": {
@@ -93,7 +93,7 @@
                 }
             }
         },
-        "api.HealthResponse": {
+        "health.HealthResponse": {
             "type": "object",
             "properties": {
                 "status": {
@@ -101,20 +101,7 @@
                 }
             }
         },
-        "cat.CatCmd": {
-            "type": "object",
-            "properties": {
-                "birthday": {
-                    "type": "string",
-                    "example": "2000-01-01"
-                },
-                "name": {
-                    "type": "string",
-                    "example": "Mimoso"
-                }
-            }
-        },
-        "cat.CatDto": {
+        "route.CatResponse": {
             "type": "object",
             "properties": {
                 "birthday": {
@@ -128,13 +115,40 @@
                 }
             }
         },
-        "cat.ListCatsDto": {
+        "route.CreateCatRequest": {
+            "type": "object",
+            "properties": {
+                "birthday": {
+                    "type": "string",
+                    "example": "2000-01-01"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Mimoso"
+                }
+            }
+        },
+        "route.CreateCatResponse": {
+            "type": "object",
+            "properties": {
+                "birthday": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "route.FindCatsResponse": {
             "type": "object",
             "properties": {
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/cat.CatDto"
+                        "$ref": "#/definitions/route.CatResponse"
                     }
                 }
             }
